# c-training

./: arrays.c  arraysofstrings.c  arraystructs.c  bitwis.c  daffodils.txt  enum.c  function.c  guess.c  if.c  input.c  loop.c  main.c  math.c  memory.c  nestedloop.c  pointers.c  prototype.c  quiz.c  rand.c  readfile.c  sortarrays.c  string.c  struct.c  swap.c  switch.c  tempCodeRunnerFile.c  ternar.c  variables.c  writefile.c
cmake/1OneFile/: CMakeLists.txt  build.bat  build.txt  main.c
cmake/2Header/: CMakeLists.txt
cmake/3Structure/: CMakeLists.txt
cmake/4OtherStructure/: CMakeLists.txt
cmake/4OtherStructure/src/: functions.c  functions.h
cmake/5Library/: CMakeLists.txt
cmake/6Install/: CMakeLists.txt
cmake/6Install/src/: main.c
raylib/: CMakeLists.txt  Readme.md
raylib/src/: main.c
sdl/: .gitignore  CMakeLists.txt  Readme.md  main.c
sdl/src/: main.c
